--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "dompdf/dompdf": "^3.1",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
+        "picqer/php-barcode-generator": "^3.2",
         "symfony/asset": "7.3.*",
         "symfony/asset-mapper": "7.3.*",
         "symfony/console": "7.3.*",
